# autobench

./: .gitattributes  .gitignore  AAnF_Benchmark_Tool.py  AGENTS.md  CLEANUP_SUMMARY.md  CONTEXT.md  CONTRIBUTING.md  NUBANK_ANALYSIS_RESULTS.md  PRESET_REFACTOR_PLAN.md  PROGRESS_UPDATE.md  README.md  RECOVERY_NOTES.md  SETUP.md  TECHNICAL_SPECIFICATION.md  benchmark.ps1  benchmark.py  benchmark_gui_v2.ps1  benchmark_tool.py  clustering.ipynb  config.template.json  constraints.txt  create_offline_bundle.ps1  deploy_and_install.ps1  edge_deploy.yaml  ganho_peer_group.docx  install.sh  mypy.ini  onboard.sh  onboarding.md  output.md  plot_kmeans_assumptions.ipynb  presentation.md  presentation_old.md  presets.json  prompting.md  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  robocop_handoff.md  (+10 more)
.cursor/: environment.json
.github/: copilot-instructions.md
config/: peer_auto_privacy.yaml  privacy_rules.yaml  template.yaml
core/: __init__.py  analysis_calculator.py  analysis_run.py  audit_log.py  audit_package.py  balanced_export.py  category_builder.py  category_suppression.py  compliance.py  constants.py  contracts.py  control3_policy.py  data_loader.py  diagnostics_engine.py  dimensional_analyzer.py  excel_reports.py  export_sanitizer.py  global_weight_optimizer.py  impact_calculator.py  observability.py  output_artifacts.py  preset_comparison.py  preset_workflow.py  privacy_policy.py  privacy_rules.py  privacy_validation.py  privacy_validation_builder.py  privacy_validator.py  report_artifact_builder.py  report_content.py  report_generator.py  report_models.py  representativeness.py  solver_request_builder.py  subset_search.py  validation_runner.py
dispatch/: __init__.py  __main__.py  app.py  app.tcss  config.py  errors.py  formatting.py  impala.py  jobs.py  kerberos.py  manifest.py  process.py  runner.py  sql.py  version.py
docs/: 2026_04_08_AF_Monitor_Status_Final- (1).pptx  ARCHITECTURAL_REFACTORING_PLAN.md  Autobench_v3.0_Precision_Compliance.pptx  Autobench_v3.0_Precision_Compliance_PRESENTATION_SCRIPT.md  CLI_SWEEP_RESULTS.md  CLI_SWEEP_REVIEW.md  CODE_REVIEW_FINDINGS.md  CORE_LOGIC_REVIEW.md  CORE_TECHNICAL_DOC.md  Control 3 - Customer_Merchant Performance-v5-20260603_075246.docx  DEMO_SESSION_RUNBOOK.md  DETAILED_FIX_PLAN.md  DE_SLOP_AUDIT.md  EXECUTIVE_PRESENTATION_SCRIPT.md  FEATURE_USER_STORIES.csv  IMPLEMENTATION_TESTING_PLAN.md  OPERATIONAL_GAINS.docx  OPERATIONAL_GAINS.md  OPERATIONAL_GAINS_REVIEW.md  PRODUCTION_READINESS_IMPLEMENTATION_PLAN.md  REFACTORING_ANALYSIS.md  REFACTORING_IMPLEMENTATION_PLAN.md  REFACTORING_STATUS_REPORT.md  RELEASE_PROCESS.md  RESOURCE_MANAGEMENT.md  VERIFICATION_INSTRUCTIONS.md  autobench-onboarding.html  control-3-customer-merchant-performance-v5-20260603.md  control3_gap_matrix.md  control3_implementation_summary.md  development-workflow.md  edge-node-first-time-setup.md  edge-node-smoke-test.md  edge-node-tui-operating-model.md  goal-phase-1-safety.md  goal-phase-2-correctness.md  goal-phase-3-resilience-observability.md  goal-phase-4-polish-feedback.md  goal-phase-5-test-hardening.md  goal-ui-ux-closure-loop.md  (+16 more)
examples/: run_from_python.py
mocks/: dev-env.ps1  dev-env.sh  smtpd.py
old/: 20250625_santander_peer_group_data_pj_peer_v2.xlsx  20250708_santander_dynamic_benchmark_v3.xlsx  Benchmark_authO_Santander_Wallet_Industria_Wallet_Overview.ipynb  Benchmark_authO_Santander_ext1e2_pf_peer.ipynb  benchmark_gui.ps1  (+4 more)
(+335 files in other folders)
